WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168667
Fix two failing WebKit legacy tests
https://bugs.webkit.org/show_bug.cgi?id=168667
Summary
Fix two failing WebKit legacy tests
Anders Carlsson
Reported
2017-02-21 12:06:22 PST
Fix two failing WebKit legacy tests
Attachments
Patch
(2.10 KB, patch)
2017-02-21 12:07 PST
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2017-02-21 12:07:55 PST
Created
attachment 302293
[details]
Patch
Anders Carlsson
Comment 2
2017-02-21 12:16:58 PST
Committed
r212739
: <
http://trac.webkit.org/changeset/212739
>
Alexey Proskuryakov
Comment 3
2017-03-20 12:23:57 PDT
Which tests were these? Are they skipped?
Anders Carlsson
Comment 4
2017-03-20 12:29:05 PDT
(In reply to
comment #3
)
> Which tests were these? Are they skipped?
Two pasteboard tests. I introduced the failures and then fixed them.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug