Fix two failing WebKit legacy tests https://bugs.webkit.org/show_bug.cgi?id=168667

Reviewed by Tim Horton.

Handle the NSPasteboardTypeString type.

* platform/mac/PasteboardMac.mm:
(WebCore::Pasteboard::read):
(WebCore::addHTMLClipboardTypesForCocoaType):

Canonical link: https://commits.webkit.org/185666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212739 268f45cc-cd09-0410-ab3c-d52691b4dbfc